// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View renders a document view 1`] = `
<div
  id="view"
>
  <div
    id="ContentMetadataTags"
  />
  <div
    id="SlotRenderer"
  />
  <div
    id="DefaultView"
  />
  <div
    id="SlotRenderer"
  />
  <div
    id="Portal"
  />
</div>
`;

exports[`View renders a summary view 1`] = `
<div
  id="view"
>
  <div
    id="ContentMetadataTags"
  />
  <div
    id="SlotRenderer"
  />
  <div
    id="SummaryView"
  />
  <div
    id="SlotRenderer"
  />
  <div
    id="Portal"
  />
</div>
`;

exports[`View renders a tabular view 1`] = `
<div
  id="view"
>
  <div
    id="ContentMetadataTags"
  />
  <div
    id="SlotRenderer"
  />
  <div
    id="TabularView"
  />
  <div
    id="SlotRenderer"
  />
  <div
    id="Portal"
  />
</div>
`;

exports[`View renders an empty view 1`] = `<span />`;
